# build-a-llm-from-scratch

./: README.md  pyproject.toml  requirements-dev.txt
chapter-2-working-with-text-data/: simpletokenizerv1.py  simpletokenizerv2.py  tokenizer.py
src/build-a-llm-from-scratch/chapter-2-working-with-text-data/: simpletokenizerv2.py
src/build_a_llm_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/build_a_llm_from_scratch/chapter_2_working_with_text_data/: basic_tokenizer.py  simpletokenizerv1.py  simpletokenizerv2.py
src/build_a_llm_from_scratch/chapter_2_working_with_text_data/bpe_implementation/: bpe.org  bpe.py
